deploy/gimlet/ingress.patch.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gimlet
spec:
  rules:
    - host: ${var.NGROK_DOMAIN}
